Fix some layout issues on events calendar pages in WSUWP

--- a/events-calendar.less
+++ b/events-calendar.less
@@ -43,6 +43,10 @@
 		}
 	}
 
+	.tribe-events-sub-nav {
+		max-width: none;
+	}
+
 	.tribe-related-events-thumbnail {
 		max-width: 198px;
 
@@ -105,6 +109,15 @@
 			display: none;
 		}
 	}
+
+	.tribe_events-template-default,
+	.tribe_venue-template-default,
+	.tribe-theme-spine.events-archive {
+		.article-header {
+			display: none;
+		}
+	}
+
 
 	.type-tribe_events[class*=post-] {
 		.tribe-events-cal-links {
